no padding for all <a>, adjust spacing for <a> in spotistats, fix page resource load

--- a/css/spotistats.css
+++ b/css/spotistats.css
@@ -36,6 +36,10 @@ div {
     padding-top: 0px;
 }
 
+#results-div a {
+    margin-right: 20px;
+}
+
 .no-spacing {
     margin: 0;
     padding: 0;
