--- a/writing/lifeiszoo/lifeiszoo.css
+++ b/writing/lifeiszoo/lifeiszoo.css
@@ -11,10 +11,6 @@
     margin-left: 10px;
 }
 
-.toc-section-contaienr a {
-    padding: 0;
-}
-
 /* Get rid of big gap between desc and entries */
 
 #entriesContainer {
